Changed class of the CSV buttons to match Access buttons

--- a/APIDocumentation/mdall-dataset-en.html
+++ b/APIDocumentation/mdall-dataset-en.html
@@ -379,7 +379,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Active</td>
-                                        <td><input type="button" id="dlLicence" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Licence Data', 'https://api.hres.ca/mdall/api-v1/licence/?status=active&type=json');" /></td>
+                                        <td><input type="button" id="dlLicence" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Licence Data', 'https://api.hres.ca/mdall/api-v1/licence/?status=active&type=json');" /></td>
                                     </tr>
                                     <tr>
                                         <td>Licence</td>
@@ -396,7 +396,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archived</td>
-                                        <td><input type="button" id="dlLicence" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Licence Data (Archived)', 'https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=json');" /></td>
+                                        <td><input type="button" id="dlLicence" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Licence Data (Archived)', 'https://api.hres.ca/mdall/api-v1/licence/?status=archived&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -434,7 +434,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Active</td>
-                                        <td><input type="button" id="dlCompany" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Company Data', 'https://api.hres.ca/mdall/api-v1/company/?status=active&type=json');" /></td>
+                                        <td><input type="button" id="dlCompany" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Company Data', 'https://api.hres.ca/mdall/api-v1/company/?status=active&type=json');" /></td>
                                     </tr>
 
 
@@ -453,7 +453,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archived</td>
-                                        <td><input type="button" id="dlCompany" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Company Data (Archived)', 'https://api.hres.ca/mdall/api-v1/company/?status=archived&type=json');" /></td>
+                                        <td><input type="button" id="dlCompany" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Company Data (Archived)', 'https://api.hres.ca/mdall/api-v1/company/?status=archived&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -490,7 +490,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Active</td>
-                                        <td><input type="button" id="dlDevice" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Device Data', 'https://api.hres.ca/mdall/api-v1/device/?status=active&type=json');" /></td>
+                                        <td><input type="button" id="dlDevice" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Device Data', 'https://api.hres.ca/mdall/api-v1/device/?status=active&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -508,7 +508,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Archived</td>
-                                        <td><input type="button" id="dlDevice" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Device Data (Archived)', 'https://api.hres.ca/mdall/api-v1/device/?status=archived&type=json');" /></td>
+                                        <td><input type="button" id="dlDevice" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Device Data (Archived)', 'https://api.hres.ca/mdall/api-v1/device/?status=archived&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -544,7 +544,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td></td>
-                                        <td><input type="button" id="dlDevice" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Device Identifier Data', 'https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=json');" /></td>
+                                        <td><input type="button" id="dlDevice" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Device Identifier Data', 'https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -562,7 +562,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td></td>
-                                        <td><input type="button" id="dlDevice" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Device Identifier Data', 'https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=json');" /></td>
+                                        <td><input type="button" id="dlDevice" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Device Identifier Data', 'https://api.hres.ca/mdall/api-v1/deviceidentifier/?type=json');" /></td>
                                     </tr>
                                     
                                     <!-- Licence Type-->
@@ -581,7 +581,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><input type="button" id="dlLicenceType" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Licence Type Data', 'https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=json');" /></td>
+                                        <td><input type="button" id="dlLicenceType" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Licence Type Data', 'https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -599,7 +599,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
-                                        <td><input type="button" id="dlLicenceType" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Licence Type Data', 'https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=json');" /></td>
+                                        <td><input type="button" id="dlLicenceType" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Licence Type Data', 'https://api.hres.ca/mdall/api-v1/licencetype/?lang=en&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -617,7 +617,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>French</td>
-                                        <td><input type="button" id="dlLicenceType" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('Licence Type Data', 'https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=json');" /></td>
+                                        <td><input type="button" id="dlLicenceType" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('Licence Type Data', 'https://api.hres.ca/mdall/api-v1/licencetype/?lang=fr&type=json');" /></td>
                                     </tr>
 
                                     <tr>
@@ -654,7 +654,7 @@
                                         <td>CSV</td>
                                         <td>English</td>
                                         <td>
-                                            <input type="button" id="dlSBDLocation" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('SBD Location Data', 'https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=json');" />
+                                            <input type="button" id="dlSBDLocation" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('SBD Location Data', 'https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=en&type=json');" />
                                         </td>
                                     </tr>
 
@@ -674,7 +674,7 @@
                                         <td>CSV</td>
                                         <td>French</td>
                                         <td>
-                                            <input type="button" id="dlSBDLocation" class="btn btn-default" value="&nbsp;&nbsp;CSV&nbsp;&nbsp;" onclick="JSONtoCSV('SBD Location Data', 'https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=json');" />
+                                            <input type="button" id="dlSBDLocation" class="resource-url-analytics btn btn-primary" value="CSV" onclick="JSONtoCSV('SBD Location Data', 'https://api.hres.ca/mdall/api-v1/sbdlocation/?lang=fr&type=json');" />
                                         </td>
                                     </tr>
 
