Added support for IE 10+ for JSON to CSV download

--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -303,25 +303,25 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">mdall/api-v1/licence/?licence_number=796</span></td>
-                                    <td>Returns a list of licence where the licence number contain the number 796.</td>
+                                    <td><span class="nowrap">mdall/api-v1/licence/?licence_number=64507</span></td>
+                                    <td>Returns a list of licence where the licence number contain the number 64507.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
-                                            <li><code>796</code>&nbsp;- %796% - licence number that contains the number 796.</li>
+                                            <li><code>64507</code>&nbsp;- %64507% - licence number that contains the number 64507.</li>
                                         </ul>
                                     </td>
-                                    <td><strong>Yes</strong>will return all licences that contain 796.</td>
+                                    <td><strong>Yes</strong>will return all licences that contain 64507.</td>
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">mdall/api-v1/licence/?company_id=137584</span></td>
-                                    <td>Returns a list of licence for the company id 137584.</td>
+                                    <td><span class="nowrap">mdall/api-v1/licence/?company_id=133876</span></td>
+                                    <td>Returns a list of licence for the company id 133876.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
-                                            <li><code>137584</code>&nbsp;- %137584% - company id 137584.</li>
+                                            <li><code>133876</code>&nbsp;- %133876% - company id 133876.</li>
                                         </ul>
                                     </td>
-                                    <td><strong>Yes</strong>will return all licences for the company id 137584.</td>
+                                    <td><strong>Yes</strong>will return all licences for the company id 133876.</td>
                                     <td></td>
                                 </tr>
                                 <tr>
@@ -402,6 +402,9 @@
                                     <td><strong>licence_type_desc</strong></td>
                                     <td>The licence type description.</td>
                                 </tr>
+
+                                <!--  consider removing
+
                                 <tr>
                                     <td><strong>companyInfo</strong></td>
                                     <td>ITEM DOES NOT EXIST IN TABLE?</td>
@@ -410,6 +413,8 @@
                                     <td><strong>deviceList</strong></td>
                                     <td>ITEM DOES NOT EXIST IN TABLE?</td>
                                 </tr>
+
+                                    -->
                             </table>
 
                             <section>
@@ -576,11 +581,16 @@
                                     <td><strong>company_status</strong></td>
                                     <td>The company status (active or inactive).</td>
                                 </tr>
+
+                                <!--    consider removing
+
                                 <tr>
                                     <td><strong>licenceList</strong></td>
                                     <td>ITEM DOES NOT EXIST IN TABLE?</td>
                                 </tr>
                                 
+                                -->
+
                             </table>
                             <section>
                                 <h3 id="a3.3">Sample response</h3>
@@ -685,6 +695,9 @@
                                     </td>
                                     <td>The result will return everything where the device name contain the word red.</td>
                                 </tr>
+
+                                <!--           search-by-device will not return devices by licence number
+
                                 <tr>
                                     <td><span class="nowrap">mdall/api-v1/device/?licence_number=456</span></td>
                                     <td>Changes the result by licence number.</td>
@@ -696,6 +709,9 @@
                                     </td>
                                     <td>The result will return everything where the licence number is equal to 456.</td>
                                 </tr>
+
+                                -->
+
                             </table>
                             <p>Device can be accessed via these URIs:</p>
                             <ul>
@@ -737,11 +753,16 @@
                                     <td><strong>trade_name</strong></td>
                                     <td>The name of the device.</td>
                                 </tr>
+
+                                <!-- consider removing
+
                                 <tr>
                                     <td><strong>deviceIdentifierList</strong></td>
                                     <td>ITEM DOES NOT EXIST IN THE TABLE?</td>
                                 </tr>
                                 
+
+
                             </table>
                             <!--h3-section-start-->
                             <section>
@@ -1130,6 +1151,9 @@
                                     <td><strong>sbd_web_loc</strong></td>
                                     <td>The notice of decision web site address.</td>
                                 </tr>
+
+                                <!--        Consider removing
+
                                 <tr>
                                     <td><strong>pkg_insert1_keyword</strong></td>
                                     <td>NO LONGER SUPPORTED ON HC WEBSITE</td>
@@ -1182,6 +1206,9 @@
                                     <td><strong>additional_op_pkg</strong></td>
                                     <td>NO LONGER SUPPORTED ON HC WEBSITE</td>
                                 </tr>
+
+                                    -->
+
                              </table>
 
                             <!--h3-section-start-->
