Added "Sample Responses" to MDALL documentation -still can't find Device Identifier JSON file

--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -416,10 +416,10 @@
 
                                     -->
                             </table>
-
+                           
                             <section>
                                 <h3 id="a2.3">Sample response</h3>
-                                <pre class="prettify prettyprint linenums">to come</pre>
+                                <pre class="prettify prettyprint linenums">{<br/> &nbsp;"original_licence_no":1556,<br /> &nbsp;"licence_status":"I",<br /> &nbsp;"application_id":14685,<br /> &nbsp;"appl_risk_class":3,<br /> &nbsp;"licence_name":"PRIME & BOND NT",<br /> &nbsp;"first_licence_status_dt":"1999-03-16",<br /> &nbsp;"last_refresh_dt":"2013-01-29",<br /> &nbsp;"end_date":null,"licence_type_cd":"D",<br /> &nbsp;"company_id":105795,<br /> &nbsp;"licence_type_desc":"Single Device",<br /> &nbsp;"noc_location":null,<br /> &nbsp;"sbd_location":null,<br /> &nbsp;"has_location":false<br />}</pre>
                             </section>
 
                             <section>
@@ -594,7 +594,7 @@
                             </table>
                             <section>
                                 <h3 id="a3.3">Sample response</h3>
-                                <pre class="prettify prettyprint linenums">to come</pre>
+                                <pre class="prettify prettyprint linenums">{<br />&nbsp;"company_id":112453,<br />&nbsp;"company_name":"MENNEN MEDICAL LTD",<br />&nbsp;"addr_line_1":"4 Ha-Yarden Street",<br />&nbsp;"addr_line_2":"",<br />&nbsp;"addr_line_3":"",<br />&nbsp;"postal_code":"0076100",<br />&nbsp;"city":"Yavne",<br />&nbsp;"country_cd":"IL",<br />&nbsp;"region_cd":"",<br />&nbsp;"company_status":"A"<br />}</pre>
                             </section>
 
                             <section>
@@ -761,13 +761,13 @@
                                     <td>ITEM DOES NOT EXIST IN THE TABLE?</td>
                                 </tr>
                                 
-
+                                    -->
 
                             </table>
                             <!--h3-section-start-->
                             <section>
                                 <h3 id="a4.3">Sample response</h3>
-                                <pre class="prettify prettyprint linenums">to come</pre>
+                                <pre class="prettify prettyprint linenums">{<br />&nbsp;"original_licence_no":65113,<br />&nbsp;"device_id":189995,<br />&nbsp;"device_first_issue_dt":"2004-07-08",<br />&nbsp;"end_date":null,<br />&nbsp;"trade_name":"'HOPKINS' TELE-OTOSCOPE"<br />}</pre>
                             </section>
                             <section>
                                 <h3 id="a4.4">jQuery example</h3>
@@ -1031,7 +1031,7 @@
                             <!--h3-section-start-->
                             <section>
                                 <h3 id="a6.3">Sample response</h3>
-                                <pre class="prettify prettyprint linenums">to come</pre>
+                                <pre class="prettify prettyprint linenums">{<br />&nbsp;"licence_type_cd":"G",<br />&nbsp;"licence_type_desc":"Device Group"<br />}</pre>
                             </section>
                             <section>
                                 <h3 id="a6.4">jQuery example</h3>
@@ -1214,7 +1214,7 @@
                             <!--h3-section-start-->
                             <section>
                                 <h3 id="a7.3">Sample response</h3>
-                                <pre class="prettify prettyprint linenums">to come</pre>
+                                <pre class="prettify prettyprint linenums">{<br />&nbsp;"original_licence_no":75574,<br />&nbsp;"sbd_notice_web_loc":"http://www.hc-sc.gc.ca/dhp-mps/prodpharma/sbd-smd/md-im/sbd_smd_2008_elana_122213-eng.php#a2",<br />&nbsp;"sbd_web_loc":"http://www.hc-sc.gc.ca/dhp-mps/prodpharma/sbd-smd/md-im/sbd_smd_2008_elana_122213",<br />&nbsp;"pkg_insert1_keyword":"",<br />&nbsp;"pkg_insert1_loc":"",<br />&nbsp;"pkg_insert2_keyword":"",<br />&nbsp;"pkg_insert2_loc":"",<br />&nbsp;"pkg_insert3_keyword":"",<br />&nbsp;"pkg_insert3_loc":"",<br />&nbsp;"op_manual1_keyword":"Elana Surgical Kit",<br />&nbsp;"op_manual1_loc":"http://www.hc-sc.gc.ca/dhp-mps/alt_formats/hpfb-dgpsa/pdf/prodpharma/om_gl_2007_elana_122213_partiii",<br />&nbsp;"op_manual2_keyword":"",<br />&nbsp;"op_manual2_loc":"",<br />&nbsp;"op_manual3_keyword":"",<br />&nbsp;"op_manual3_loc":"",<br />&nbsp;"additional_op_pkg":"N"<br />}</pre>
                             </section>
                             <section>
                                 <h3 id="a7.4">jQuery example</h3>
