Added French versions of each page, directed all of the links to the proper French pages (hopefully).
Page content still in English

--- a/APIDocumentation/framework-fr.html
+++ b/APIDocumentation/framework-fr.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Drug &amp; health product register</title>
+    <title>Framework</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="dcterms.language" title="ISO639-2" content="eng" />
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="contact-us-fr.html">Français</a></li>
+                            <li><a lang="en" href="framework-en.html">English</a></li>
                         </ul>
                     </div>
                 </div>
@@ -150,23 +150,28 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index-en.html">Home</a></li>
-                                <li><a href="api-en.html">APIs</a></li>
-                                <li><a href="application-en.html">Applications</a></li>
-                                <li><a href="framework-en.html">Framework</a></li>
-                                <li><a href="architecture-en.html">Architecture Diagram</a></li>
-                                <li><a href="data-source-en.html">Data Sources</a></li>
-                                <li><a href="terms-of-service-en.html">Terms of Service</a></li>
-                                <li><a href="contact-us-en.html">Contact Us</a></li>
+                                <li><a href="index-fr.html">Home</a></li>
+                                <li><a href="api-fr.html">APIs</a></li>
+                                <li><a href="application-fr.html">Applications</a></li>
+                                <li><a href="framework-fr.html">Framework</a></li>
+                                <li><a href="architecture-fr.html">Architecture Diagram</a></li>
+                                <li><a href="data-source-fr.html">Data Sources</a></li>
+                                <li><a href="terms-of-service-fr.html">Terms of Service</a></li>
+                                <li><a href="contact-us-fr.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <h1 property="name" id="wb-cont">Contact Us</h1>
-
-                <p>If you are experiencing any issues with the APIs, please contact :</p>
-                <p>to come</p>
-
+                <h1 property="name" id="wb-cont">Framework</h1>
+                <p>
+                    The framework used to create the APIs is Microsoft ASP.NET Web API Framework.  ASP.NET Web API is a framework that makes it easy to build RESTful applications that reach a broad range of clients, including browsers and mobile devices.
+                </p>
+                <p>
+                    The APIs are exposing data in JSON or XML type format.
+                </p>
+                <p>
+                    Most of the data is coming from Oracle 11g database except for one that comes from a PostgreSQL database.  The database are stored in a public DMZ zone and is READ ONLY.  The data is protected A and therefore is available to the general public.
+                </p>
 
 
             </div>
@@ -278,6 +283,7 @@
     <!--[if lt IE 9]>
     <script src="./distro/4.0.20/wet-boew/js/ie8-wet-boew2.min.js"></script>
     <![endif]-->
+
 
 </body>
 </html>
