--- a/APIDocumentation/noc-documentation-en.html
+++ b/APIDocumentation/noc-documentation-en.html
@@ -151,7 +151,7 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="index-en.html">Home</a></li>
                                 <li><a href="api-en.html">APIs</a></li>
                                 <li><a href="application-en.html">Applications</a></li>
                                 <li><a href="framework-en.html">Framework</a></li>
