--- a/APIDocumentation/api-fr.html
+++ b/APIDocumentation/api-fr.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="contact-us-fr.html">Français</a></li>
+                            <li><a lang="en" href="api-en.html">English</a></li>
                         </ul>
                     </div>
                 </div>
@@ -150,31 +150,48 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index-en.html">Home</a></li>
-                                <li><a href="api-en.html">APIs</a></li>
-                                <li><a href="application-en.html">Applications</a></li>
-                                <li><a href="framework-en.html">Framework</a></li>
-                                <li><a href="architecture-en.html">Architecture Diagram</a></li>
-                                <li><a href="data-source-en.html">Data Sources</a></li>
-                                <li><a href="terms-of-service-en.html">Terms of Service</a></li>
-                                <li><a href="contact-us-en.html">Contact Us</a></li>
+                                <li><a href="index-fr.html">Home</a></li>
+                                <li><a href="api-fr.html">APIs</a></li>
+                                <li><a href="application-fr.html">Applications</a></li>
+                                <li><a href="framework-fr.html">Framework</a></li>
+                                <li><a href="architecture-fr.html">Architecture Diagram</a></li>
+                                <li><a href="data-source-fr.html">Data Sources</a></li>
+                                <li><a href="terms-of-service-fr.html">Terms of Service</a></li>
+                                <li><a href="contact-us-fr.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <h1 property="name" id="wb-cont">Contact Us</h1>
 
-                <p>If you are experiencing any issues with the APIs, please contact :</p>
-                <p>to come</p>
+                <h1 property="name" id="wb-cont">APIs - Documentation</h1>
+
+                <p>APIs Documentation:</p>
+                <p><a href="cvp-dataset-en.html">Canada Vigilance (CVP) Dataset</a></p>
+                <p><a href="cvp-documentation-en.html">Canada Vigilance (CVP) API Documentation</a></p>
+                <p><a href="cta-dataset-en.html">Clinical Trials Database (CTA) Dataset</a></p>
+                <p><a href="cta-documentation-en.html">Clinical Trials Database (CTA) API Documentation</a></p>
+                <p><a href="dhpr-dataset-en.html">Drug and Health Products Register (DHPR) Dataset</a></p>
+                <p><a href="dhpr-documentation-en.html">Drug and Health Products Register (DHPR)  API Documentation</a></p>
+                <p><a href="dpd-dataset-en.html">Drug Product Database (DPD) Dataset</a></p>
+                <p><a href="dpd-documentation-en.html">Drug Product Database (DPD) API Documentation</a></p>
+                <p><a href="lnhpd-dataset-en.html">Licenced Naturel Product Database (LNHPD) Dataset</a></p>
+                <p><a href="lnhpd-documentation-en.html">Licenced Naturel Product Database (LNHPD) API Documentation</a></p>
+                <p><a href="mdall-dataset-en.html">Medical Devices Active Licence Listing (MDALL) Dataset</a></p>
+                <p><a href="mdall-documentation-en.html">Medical Devices Active Licence Listing (MDALL) API Documentation</a></p>
+                <p><a href="noc-dataset-en.html">Notice of Compliance Database (NOC) Dataset</a></p>
+                <p><a href="noc-documentation-en.html">Notice of Compliance Database (NOC) API Documentation</a></p>
+                <p><a href="summary-report-dataset-en.html">Summary Report Dataset</a></p>
+                <p><a href="summary-report-documentation-en.html">Summary Report API Documentation</a></p>
 
 
 
-            </div>
+
+</div>
             <div class="row pagedetails">
                 <div class="col-sm-5 col-xs-12 datemod">
                     <dl id="wb-dtmd">
                         <dt>Date modified:&#32;</dt>
-                        <dd><time property="dateModified">2016-03-18</time></dd>
+                        <dd><time property="dateModified">2017-02-15</time></dd>
                     </dl>
                 </div>
                 <div class="clear visible-xs"></div>
@@ -278,6 +295,7 @@
     <!--[if lt IE 9]>
     <script src="./distro/4.0.20/wet-boew/js/ie8-wet-boew2.min.js"></script>
     <![endif]-->
+
 
 </body>
 </html>
