--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -1,7 +1,7 @@
 ﻿
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="index-fr.html">Français</a></li>
+                            <li><a lang="en" href="dpd-documentation-en.html">English</a></li>
                         </ul>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index-en.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="api-en.html">APIs</a></li>
                                 <li><a href="application-en.html">Applications</a></li>
                                 <li><a href="framework-en.html">Framework</a></li>
