--- a/APIDocumentation/index-fr.html
+++ b/APIDocumentation/index-fr.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="contact-us-fr.html">Français</a></li>
+                            <li><a lang="en" href="index-en.html">English</a></li>
                         </ul>
                     </div>
                 </div>
@@ -150,22 +150,21 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index-en.html">Home</a></li>
-                                <li><a href="api-en.html">APIs</a></li>
-                                <li><a href="application-en.html">Applications</a></li>
-                                <li><a href="framework-en.html">Framework</a></li>
-                                <li><a href="architecture-en.html">Architecture Diagram</a></li>
-                                <li><a href="data-source-en.html">Data Sources</a></li>
-                                <li><a href="terms-of-service-en.html">Terms of Service</a></li>
-                                <li><a href="contact-us-en.html">Contact Us</a></li>
+                                <li><a href="index-fr.html">Home</a></li>
+                                <li><a href="api-fr.html">APIs</a></li>
+                                <li><a href="application-fr.html">Applications</a></li>
+                                <li><a href="framework-fr.html">Framework</a></li>
+                                <li><a href="architecture-fr.html">Architecture Diagram</a></li>
+                                <li><a href="data-source-fr.html">Data Sources</a></li>
+                                <li><a href="terms-of-service-fr.html">Terms of Service</a></li>
+                                <li><a href="contact-us-fr.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <h1 property="name" id="wb-cont">Contact Us</h1>
+                <h1 property="name" id="wb-cont">Drug &amp; health product register - APIs - Documentation</h1>
 
-                <p>If you are experiencing any issues with the APIs, please contact :</p>
-                <p>to come</p>
+                <p>This web site will contain all the information about the HPFB Web APIs for IP 450.  It will provide information about all the APIs, the application using them and the framework used for creating them.  It will also provide a graphic that will visually explain the environment used to host the API and database servers. </p>
 
 
 
