--- a/APIDocumentation/terms-of-service-en.html
+++ b/APIDocumentation/terms-of-service-en.html
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="index-fr.html">Français</a></li>
+                            <li><a lang="fr" href="terms-of-service-fr.html">Français</a></li>
                         </ul>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="index-en.html">Home</a></li>
                                 <li><a href="api-en.html">APIs</a></li>
                                 <li><a href="application-en.html">Applications</a></li>
                                 <li><a href="framework-en.html">Framework</a></li>
