Fixed a lot of links and href text

--- a/APIDocumentation/cta-documentation-en.html
+++ b/APIDocumentation/cta-documentation-en.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="index-fr.html">Français</a></li>
+                            <li><a lang="fr" href="cta-documentation-fr.html">Français</a></li>
                         </ul>
                     </div>
                 </div>
