--- a/APIDocumentation/mdall-dataset-en.html
+++ b/APIDocumentation/mdall-dataset-en.html
@@ -67,7 +67,7 @@
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
                             <li>
-                                <a href="index-fr.html" lang="fr">Français</a>
+                                <a href="mdall-dataset-fr.html" lang="fr">Français</a>
                             </li>
                         </ul>
                     </div>
