--- a/APIDocumentation/dhpr-dataset-en.html
+++ b/APIDocumentation/dhpr-dataset-en.html
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="index-fr.html">Français</a></li>
+                            <li><a lang="fr" href="dhpr-dataset-fr.html">Français</a></li>
                         </ul>
                     </div>
                 </div>
