--- a/APIDocumentation/dpd-documentation-en.html
+++ b/APIDocumentation/dpd-documentation-en.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
-                            <li><a lang="fr" href="index-fr.html">Français</a></li>
+                            <li><a lang="fr" href="dpd-documentation-fr.html">Français</a></li>
                         </ul>
                     </div>
                 </div>
