--- a/APIDocumentation/summary-report-dataset-en.html
+++ b/APIDocumentation/summary-report-dataset-en.html
@@ -65,7 +65,7 @@
                     <div class="col-md-12">
                         <ul class="list-inline margin-bottom-none">
                             <li>
-                                <a href="index-fr.html" lang="fr">Français</a>
+                                <a href="summary-report-dataset-fr.html" lang="fr">Français</a>
                             </li>
                         </ul>
                     </div>
